--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ body{
 	line-height: 30px;
 	background: rgba(241, 0, 255, 0.3);
 	background: linear-gradient(90deg, rgba(241, 0, 255, 0.3) 0%, rgba(0, 255, 0, 0.35) 80%);
-	box-shadow: #787A80;
 	text-align: center;
 	border-radius: 92px 92px 92px 92px;
 	margin-bottom: 24px;
@@ -177,7 +176,7 @@ ul li:hover ul {
 .line1 {
 	width: 200px;
 	height: 50px;
-	margin: -50px 0 0 50p;
+	margin: -50px 0 0 50px;
 	background-image: url("../img/mar-caribe.jpg");
 }
 
